+添加了通过内置浏览器登录 *更新JDK和依赖版本